sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var trier = true
  var longueur = getNombreValeurs()
  
  whil(trier) {
    var nbTris=0
    for (i <- 0 to longueur-2){
      if(plusPetitQue(i,i+1)){
        echange(i,i+1)
        nbTris = nbTris+1
      }
    }
    if(nbTris == 0){
      trier= false
    }

  }
}
